--- a/ClientService/src/main/resources/application.yml
+++ b/ClientService/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8082
+  port: 8083
 
 spring:
   application:
-    name: clientservice
+    name: client
   datasource:
     url: jdbc:postgresql://localhost:5432/event
     username: postgres
