--- a/Management/src/main/resources/application.yml
+++ b/Management/src/main/resources/application.yml
@@ -4,11 +4,19 @@ server:
 spring:
   application:
     name: managementservice
+  main:
+    allow-bean-definition-overriding: true
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/event
+#    username: postgres
+#    password: postgres
+#    driver-class-name: org.postgresql.Driver
+
   datasource:
-    url: jdbc:postgresql://localhost:5432/event
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mysql://localhost:3306/event
+    username: root
+    password: pass@word1
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
