--- a/AuthenticationService/src/main/resources/application.properties
+++ b/AuthenticationService/src/main/resources/application.properties
@@ -1,14 +1,25 @@
 # Application Name
 spring.application.name=AuthenticationService
 
-# PostgreSQL Database Configuration
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+server.port=8085
+
+## PostgreSQL Database Configuration
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#
+## JPA & Hibernate
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# MySQL Database Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=pass@word1
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
