--- a/ClientService/src/main/resources/application.yml
+++ b/ClientService/src/main/resources/application.yml
@@ -1,16 +1,20 @@
+
 server:
   port: 8083
 
 spring:
   application:
-    name: client
+    name: ClientService
   datasource:
-    url: jdbc:postgresql://localhost:5432/event
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/testdb
+    username: root
+    password: pass@word1
   jpa:
     hibernate:
       ddl-auto: update
-      show-sql: true
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+
