--- a/Management/src/main/resources/application.yml
+++ b/Management/src/main/resources/application.yml
@@ -1,16 +1,18 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   application:
-    name: managementservice
+    name: ManagementService
   datasource:
-    url: jdbc:postgresql://localhost:5432/event
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/testdb
+    username: root
+    password: pass@word1
   jpa:
     hibernate:
       ddl-auto: update
-      show-sql: true
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
