--- a/AuthenticationService/src/main/resources/application.properties
+++ b/AuthenticationService/src/main/resources/application.properties
@@ -3,16 +3,7 @@ spring.application.name=AuthenticationService
 
 server.port=8085
 
-## PostgreSQL Database Configuration
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#
-## JPA & Hibernate
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
