--- a/Management/src/main/resources/application.yml
+++ b/Management/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 9999
 
 spring:
   application:
@@ -9,6 +9,8 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+  main:
+    allow-bean-definition-overriding: true
 
   jpa:
     hibernate:
