--- a/Management/src/main/resources/application.yml
+++ b/Management/src/main/resources/application.yml
@@ -4,12 +4,20 @@ server:
 spring:
   application:
     name: managementservice
-  datasource:
-    url: jdbc:postgresql://localhost:5432/event
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/event
+#    username: postgres
+#    password: postgres
+#    driver-class-name: org.postgresql.Driver
 
+  datasource:
+    url: jdbc:mysql://localhost:3306/event
+    username: root
+    password: 1234 #pass@word1
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  main:
+    allow-bean-definition-overriding: true
   jpa:
     hibernate:
       ddl-auto: update
