--- a/ClientService/src/main/resources/application.yml
+++ b/ClientService/src/main/resources/application.yml
@@ -4,15 +4,12 @@ server:
 
 spring:
   application:
-<<<<<<< HEAD
     name: ClientService
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb
-    username: root
-    password: pass@word1
-=======
-    name: client
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/testdb
+#    username: root
+#    password: pass@word1
 #  datasource:
 #    url: jdbc:postgresql://localhost:5432/event
 #    username: postgres
@@ -21,10 +18,9 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/event
     username: root
-    password: pass@word1
+    password: 1234 #pass@word1
     driver-class-name: com.mysql.cj.jdbc.Driver
 
->>>>>>> 25f0b976dbf84f4c117f3f6f06598f55f555d68c
   jpa:
     hibernate:
       ddl-auto: update
