--- a/Management/src/main/resources/application.yml
+++ b/Management/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 
 spring:
   application:
-    name: managementservice
+    name: Management
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb
+    url: jdbc:mysql://localhost:3306/event
     username: root
     password: pass@word1
   main:
