--- a/Management/src/main/resources/application.yml
+++ b/Management/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: Management
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/event
+    url: jdbc:mysql://localhost:3306/testdb
     username: root
     password: pass@word1
   main:
