--- a/GatewayEvent/src/main/resources/application.yml
+++ b/GatewayEvent/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
         - id: ClientService
           uri: http://localhost:8082
           predicates:
-            - Path=/client/**,/venue/**,/vendor/**
+            - Path=/user/**,/venue/**,/vendor/**
           filters:
             - AuthenticationFilter
 
