--- a/AuthenticationService/src/main/resources/application.properties
+++ b/AuthenticationService/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8085
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
-spring.datasource.password=pass@word1
+spring.datasource.password=1234
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
